alignment fixes

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
     }
 
     .image-wrapper {
-        height: 30vw;
+        height: 20vw;
         margin: 0 auto;
     }
 }
